# facefusion

./: 8392_diff_base.txt  BUGFIXES.md  CHANGES.txt  COMPLETE_INTEGRATION_STATUS.md  COMPLETE_OPTIMIZATIONS_IMPLEMENTED.md  CUDA_GRAPHS_SUMMARY.txt  CUDA_GRAPH_IMPLEMENTATION.md  CUDA_GRAPH_STATUS.md  CUDA_OPTIMIZATION_INTEGRATION_SUMMARY.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  OPTIMIZATION_README.md  OPTIMIZATION_SUMMARY.md  diff_output.txt  test_cuda_optimizations.py  test_gpu_mode.py  test_optimizations.py
facefusion/: __init__.py  args.py  choices.py  core.py  cuda_graph_helper.py  cuda_graph_manager.py  cuda_io_binding.py  download.py  execution.py  face_analyser.py  face_detector.py  face_helper.py  face_helper_gpu.py  face_masker_gpu.py  face_tracker.py  ffmpeg.py  ffmpeg_builder.py  gpu_blending.py  gpu_color.py  gpu_face_helper.py  gpu_mask_ops.py  gpu_types.py  gpu_video_pipeline.py  inference_manager.py  logger.py  program.py  temporal_filters.py  tensorrt_utils.py  types.py  vision_enhanced.py
facefusion/cuda/: CMakeLists.txt  __init__.py  bindings.cpp  color_linear.cu  composite.cu  kernel_launchers.cu  mask_hysteresis.cu  performance.py  warp_bilinear.cu  warp_composite.cu
facefusion/gpu/: __init__.py  compositor.py  kernels.py  preprocess.py
facefusion/processors/: batch_processor.py  enhanced_blending.py  temporal_smoother.py  types.py
facefusion/processors/modules/: face_swapper.py  temporal_smoother.py
facefusion/processors/modules/face_swapper/: core.py  core_gpu.py  types.py
facefusion/processors/utils/: __init__.py  enhanced_blending.py
facefusion/quality/: quality_monitor.py
facefusion/stability/: eos_guard.py  fhr_refine.py  pose_filter.py
facefusion/utils/: cuda_graphs.py
facefusion/workflows/: image_to_image.py  image_to_video.py
tests/: test_execution.py
